Fix the bars overlapping the controls

--- a/css/main.css
+++ b/css/main.css
@@ -29,16 +29,12 @@ body
 
 #view
 {
+  margin: 0 auto;
+  min-height: 320px;
   /* Center content vertically */
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Center vertically and horizontally within viewport */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
 }
 
 .bar
